--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "邓祥志"
 description              : &description "一名推荐算法工程师"
 url                      : https://newbie0621.github.io/dengxiangzhi.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "newbie0621/dengxiangzhi.github.io"
+repository               : "newbie0621.github.io/dengxiangzhi.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
