--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "newbie0621.github.io/dengxiangzhi.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : ./images/证件照.png
+  avatar           : "./images/证件照.png"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "中国·江苏·南京"
   employer         : "西南石油大学"
   uri              : # URL
-  email            : "none@example.org"
+  email            : "DengXZ0621@163.com"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
