--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "newbie0621.github.io/dengxiangzhi.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/证件照.png"
+  avatar           : "证件照.png"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
