--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "newbie0621.github.io/dengxiangzhi.github.io"
 author:
   # Biographic information
   avatar           : "证件照.png"
-  name             : "Your Sidebar Name"
+  name             : "邓祥志"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "一名推荐算法工程师"
   location         : "中国·江苏·南京"
   employer         : "西南石油大学"
   uri              : # URL
